--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     labels:
     # Router
       - "traefik.enable=true"
-      - "traefik.http.routers.pihole.rule=Host(`10.200.0.5`)"
+      - "traefik.http.routers.pihole.rule=Host(`${BIND_IP}`)"
       - "traefik.http.routers.pihole.entrypoints=web"
       - "traefik.http.services.pihole.loadbalancer.server.port=80"
       # Middleware
@@ -54,9 +54,9 @@ services:
       - '--accessLog.filePath=/var/log/traefik/access.log'
       - '--accessLog.format=json'
     ports:
-      - '10.200.0.5:80:80/tcp'
-      - '10.200.0.5:443:443/tcp'
-      #- '10.200.0.5:8080:8080/tcp' # The Web UI (enabled by --api.insecure=true)
+      - '${BIND_IP}:80:80/tcp'
+      - '${BIND_IP}:443:443/tcp'
+      #- '${BIND_IP}:8080:8080/tcp' # The Web UI (enabled by --api.insecure=true)
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
     networks:
